--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ address:
     - University of Washington
     - Seattle, WA 98105
     - odluw@uw.edu
-email: odluw@uw.edu
+email: mailto:odluw@uw.edu
 tel: 
 
 
