--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@
 title: " "
 description: " "
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
-baseurl: "" #important: start with /
-url: "https://odl.ischool.uw.edu"
+baseurl: "/" #important: start with /
 
 # Build settings
 markdown: kramdown
