--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: " "
 description: " "
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
-baseurl: "/" #important: start with /
+baseurl: "/index.html" #important: start with /
 
 # Build settings
 markdown: kramdown
