--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ### GENERAL SETTINGS ###
 
 # Site settings
-title: " "
-description: " "
+title: "Development and Access to Information"
+description: "Access to information (A2I) is not an end in itself, but rather a driver of progress across the board. It empowers people and communities, laying the foundations for equality, sustainability, and prosperity. It provides a clear illustration of the rights-based, holistic approach to development taken in the 2030 Agenda."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "/" #important: start with /
 
@@ -34,109 +34,19 @@ collections:
 # Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
 social:
   - title: twitter
-    url: https://twitter.com/ODLiteracy
+    url: https://twitter.com/taschagroup
   - title: medium
-    url: https://medium.com/open-data-literacy
+    url: https://medium.com/
 
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
 address:
   - lines:
+    - Technology and Social Change Group
     - The Information School
     - University of Washington
-    - Seattle, WA 98105
-email: mailto:odluw@uw.edu
-tel: 
+    - Bloedel Hall 060
+    - Seattle, WA 98195
+email: mailto:tascha@uw.edu
+tel: +1 (206) 616-9101
 
 
-### GENERAL DATA FOR VARIOUS LOCATIONS ###
-
-# Members information. Shown on About page.
-members:
-  - name: Carole Palmer
-    position: Principal Investigator
-    text: Carole Palmer is a Professor and Associate Dean for Research at the University of Washington iSchool.
-    img: clpalmer.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:clpalmer@uw.edu
-  - name: Nic Weber
-    position: Principal Investigator
-    text: Nic Weber is an assistant professor at the University of Washington iSchool.
-    img: nWeber.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:nmweber@uw.edu
-  - name: An Yan
-    position: Ph.D. Student
-    text: An Yan is currently a Ph.D. student in Information Science at the University of Washington. 
-    img: anyan.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:yanan15@uw.edu
-  - name: Bree Norlander
-    position: Project Coordinator
-    text: Bree Norlander recently completed her M.L.I.S. at the University of Washington.
-    img: bnorlander.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:norlab@uw.edu
-  - name: Chris Coward
-    position: 
-    text: Chris Coward is the Co-Founder, Principal Research Scientist, and Director of the Technology & Social Change Group (TASCHA) at the University of Washington Information School. 
-    img: ccoward.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:ccoward@uw.edu
-  - name: Mike Crandall
-    position: 
-    text: Mike Crandall is a Principal Research Scientist at the University of Washington’s Information School.
-    img: mikecran.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:mikecran@uw.edu
-  - name: Bill Howe
-    position: 
-    text: Bill Howe is an Associate Professor at the University of Washington Information School.
-    img: billhowe.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:billhowe@uw.edu
-  - name: Chris Rothschild
-    position: 
-    text: Chris is a Research Analyst with the Technology & Social Change Group (TASCHA) at the University of Washington Information School. 
-    img: chriskr.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:chriskr@uw.edu
-  - name: Jevin West
-    position: 
-    text: Jevin West is an Assistant Professor and Co-Director of the Datalab at the University of Washington Information School.
-    img: jevinw.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:jevinw@uw.edu
-
-
-
-# Clients information. Shown on Home and About pages.
-clients:
-  - name: Washington State Department of Transportation
-    img: wsdot-logo.png
-  - name: City of Seattle
-    img: CityofSeattle.png
-  - name: Seattle Public Library
-    img: SPL-Logo.png
-  - name: WA Office of the Chief Information Officer
-    img: OCIOthumb.png
-  - name: WA State Historical Society
-    img: wshs-logo.png
-
-
-
-# Short text about your company. Shown in footer on every page and also separately on Home and Contact page.
-about: "Open Data Literacy is a collaborative project led by the Information School at the University of Washington in partnership with public institutions that create, manage, and publish open data. Open Data Literacy is funded by a generous grant from the Institute of Museum and Library Services."
-# Testimonial content. Shown on Home and About page.
-testimonial:
-    message: "[Open Data Literacy] will advance data literacy by developing new curriculum for iSchool students and public librarians; coordinating internships, fieldwork, and action research projects between UW and public institutions with open data initiatives, and; producing community workshops and open education resources that are freely available to the general public."
-    author: Nic Weber
-    position: Assistant Professor @ University of Washington iSchool
