--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ excerpt_separator: <!--more--> #use this in posts to define how long the excerpt
 colors:  #in hex code if not noted else
   primary: "#E81E25""
   primary_rgb: "232, 30, 37"  #rgb of the primary. Needed in some places for the transparency effect.
-  secondary: "#EDEDEE"
+  secondary: "#E81E25"
   link: "#01b2fe"
   link_hover: "#01b2fe"
   footer_heading: "#ffffff"
