--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink: /:categories/:title
 excerpt_separator: <!--more--> #use this in posts to define how long the excerpt of the post (that is shown on the Blog page) is
 
 colors:  #in hex code if not noted else
-  primary: "#e81e25""
+  primary: "#e81e25"
   primary_rgb: "232, 30, 37"  #rgb of the primary. Needed in some places for the transparency effect.
   secondary: "#e81e25"
   link: "#01b2fe"
