--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ address:
     - University of Washington
     - Bloedel Hall 060
     - Seattle, WA 98195
-email: mailto:tascha@uw.edu
+email: tascha@uw.edu
 tel: +1 (206) 616-9101
 
 
